--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,9 +24,13 @@
           </ul>
   </div>
 <div class="container">
-  <p class="notice"><%= notice %></p>
-  <p class="alert"><%= alert %></p>
-
+  <% flash.each do |type, message| %>
+    <div class="alert <%= flash_class type %>">
+    <button class="close" data-dismiss="alert">x</button>
+    <%= flash[:notice] %>
+</div>
+  <% end %>
+  
 <%= yield %>
 </div>
 </body>
